UI pagination alignemnt issue

--- a/hmecloud/client/src/components/Report/SummaryReport.css
+++ b/hmecloud/client/src/components/Report/SummaryReport.css
@@ -283,7 +283,7 @@ h2 .report-start-time-value,h2 .report-end-time-value{
   padding-right : 0px !important;
 }
 .show-all-single{
-  margin-top: -17px;
+  margin-top: -18px;
   text-align: right;
   margin-right: 55px;
 }
